--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -54,17 +54,21 @@
 
     <TextView
         android:id="@+id/cabecera2"
-        android:layout_width="0dp"
-        android:layout_height="92dp"
+        android:layout_width="371dp"
+        android:layout_height="203dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:text="    Puedes encontrarme en los siguientes enlaces:"
-        android:textColor="#673AB7"
+        android:background="#F8F2C2"
+        android:paddingTop="50dp"
+        android:text="  Puedes encontrarme en los siguientes enlaces:"
+        android:textAlignment="center"
+        android:textColor="#260F4E"
         android:textSize="25sp"
+        android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.294" />
+        app:layout_constraintVertical_bias="0.059" />
 </androidx.constraintlayout.widget.ConstraintLayout>
